<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.juddyreina.oiste.sitio2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/beige"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <LinearLayout
                android:layout_marginTop="160sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/baseLayout2"
                >
                <TextView
                    style="@style/TexTitle2"
                    android:text="@string/sitios_section2"
                    />
                <TextView
                    android:gravity="center"
                    style="@style/TexMinTitle"
                    android:text="@string/sitio2_text"
                    />
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="300sp"
                    android:background="@drawable/tierragua1"
                    />
                <TextView
                    style="@style/TexSubTitle"
                    android:text="@string/contacto"
                    />
                <TextView
                    style="@style/TexSubTitle2"
                    android:text="reservas@tierradeagua.org"
                    />
                <TextView
                    style="@style/TexSubTitle2"
                    android:text="366 63 33 | 301 741 41 99"
                    />

            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/TexSubTitle"
            android:text="@string/ubicacion"
            />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>
