<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.juddyreina.oiste.sitio1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige"
        >
        <LinearLayout
            android:layout_marginTop="70sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/baseLayout2"
            >
            <TextView
                style="@style/TexTitle2"
                android:text="@string/sitios_section1"
                android:textSize="42sp"
                />

            <TextView
                style="@style/TexTitle2"
                android:textSize="50sp"
                />

            <TextView
                style="@style/TexSubTitle"
                android:text="@string/ubicacion"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.gms.maps.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"/>
            </LinearLayout>

            <TextView
                style="@style/TexSubTitle"
                android:text="@string/contacto"
                />

        </LinearLayout>
    </ScrollView>



</FrameLayout>
