<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.juddyreina.oiste.teatro1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beige"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/baseLayout2"
            >
            <TextView
                style="@style/TexSubTitle"
                android:textSize="30sp"
                />
            <TextView
                style="@style/TexTitle2"
                android:text="@string/bar_section2"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bar2"
                />
            <TextView
                style="@style/TexSubTitle"
                android:text="@string/contacto"
                />
            <TextView
                style="@style/TexSubTitle"
                android:text="581 49 44"
                android:textColor="@color/teal"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bar22"
                />
            <TextView
                style="@style/TexSubTitle"
                android:text="@string/ubicacion"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <com.google.android.gms.maps.MapView
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="250sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</FrameLayout>
