<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.juddyreina.oiste.sitio3">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/beige"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"

            >
            <LinearLayout
                android:layout_marginTop="100sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/baseLayout2"
                >
                <TextView
                    style="@style/TexTitle2"
                    android:text="@string/sitios_section3"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/parque"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/parque2"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/parque1"
                    />
                <TextView
                    style="@style/TexSubTitle"
                    android:text="@string/contacto"
                    />
                <TextView
                    style="@style/TexSubTitle2"
                    android:text="516 83 00"
                    />

            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/TexSubTitle"
            android:text="@string/ubicacion"
            />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>
