<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.juddyreina.oiste.teatro1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/beige"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/baseLayout2"
                >
                <TextView
                    style="@style/TexSubTitle"
                    android:textSize="150sp"
                    />
                <TextView
                    style="@style/TexTitle2"
                    android:text="@string/teatro_section2"
                    android:textSize="45sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/teatro2"
                    />
                <TextView
                    style="@style/TexSubTitle"
                    android:text="@string/contacto"
                    />
                <TextView
                    style="@style/TexSubTitle"
                    android:text=" 215 10 10"
                    android:textColor="@color/teal"
                    />
                <TextView
                    style="@style/TexSubTitle"
                    android:text="matacandelas@matacandelas.com"
                    android:textColor="@color/teal"
                    android:textSize="22sp"
                    />
            </LinearLayout>
        </ScrollView>

        <TextView
            style="@style/TexSubTitle"
            android:text="@string/ubicacion"
            />

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:layout_weight="1"/>

    </LinearLayout>

</FrameLayout>
