<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.juddyreina.oiste.cine3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo2"
        >

        <LinearLayout
            android:layout_marginTop="-8sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/baseLayout2"

            >

            <TextView
                style="@style/TexTitle"
                android:text="@string/cine_section3"
                />

            <TextView
                style="@style/TexSubTitle3"
                android:text="@string/boleteria"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_marginLeft="10sp"
                    android:layout_width="@dimen/window"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="8sp"
                        android:text="2D"

                        />
                    <TextView
                        style="@style/Text"
                        android:layout_marginLeft="20sp"
                        android:text="L-J (no festivos)"
                        android:textColor="@color/skyblue"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="50sp"
                        android:text="$8.000"
                        />
                    <TextView
                        style="@style/Text"
                        android:layout_marginLeft="20sp"
                        android:text="M-W (no festivos)"
                        android:textColor="@color/skyblue"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="50sp"
                        android:text="$4.000"
                        />
                    <TextView
                        style="@style/Text"
                        android:layout_marginLeft="20sp"
                        android:text="V-S-D-Festivos"
                        android:textColor="@color/skyblue"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="50sp"
                        android:text="$9.000"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/window"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="8sp"
                        android:text="3D"
                        />
                    <TextView
                        style="@style/Text"
                        android:layout_marginLeft="20sp"
                        android:text="L-J (no festivos)"
                        android:textColor="@color/skyblue"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="50sp"
                        android:text="$12.000"
                        />
                    <TextView
                        style="@style/Text"
                        android:layout_marginLeft="20sp"
                        android:text="M-W (no festivos)"
                        android:textColor="@color/skyblue"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="50sp"
                        android:text="$6.000"
                        />
                    <TextView
                        style="@style/Text"
                        android:layout_marginLeft="20sp"
                        android:text="V-S-D-Festivos"
                        android:textColor="@color/skyblue"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_marginLeft="50sp"
                        android:text="$13.000"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                style="@style/TexSubTitle3"
                android:text="@string/ubicacion"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:layout_marginLeft="10sp"
                    android:layout_width="@dimen/window"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_gravity="left"
                        android:text="Jumbo La 65"
                        />
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_gravity="left"
                        android:text="CC Premium Plaza"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/window"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        style="@style/TexMinTitle3"
                        android:layout_gravity="left"
                        android:text="CC Bosque Plaza"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                style="@style/TexSubTitle3"
                android:text="@string/contacto"
                />
            <TextView
                style="@style/TexMinTitle3"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Telefono: 605 15 87"
                android:textColor="@color/skyblue"
                />


        </LinearLayout>


    </ScrollView>


</FrameLayout>
